--- a/JobAdd.html
+++ b/JobAdd.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GeP/KT888mU1/7Z/nBNfhtEEG0V9JMOScl2ZcFYxOIJAAxL0qO1MStaPeho4OFi94lKWkQclxgB5vDw/5mA1QDFsRUjiHrNsDB/AZ84r0ODN9dP3Ue5GPXUH2u4zlIWZ.H6KVJdkmoFTYYYrXumRlD7YLr90ICRoqMrqzCqUX79KOtoMhv7g/QHstHX7k0BNtW/LQHQQSTLR3pPFSHbIqitN916LLDrhL6IJFry9NqOAoeL+rby2Vfb4j84VmP9O4">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="69lYCHIDlEWyFWq9xWSqHmrLAA0ZBpuki+UsUP5wfOnOGodeFfT3xkTjYR8vFNlAbqjHRYUgklguDF58k+8aCFDhQ85z3lbn1o/p8/+9MnUtSCDbpcyQ4uk/7mYR0/Up.yBx/FLnwuSJmyJI6lt8ireRDqHpgN+0Iz7281u+9xmiJHx/wfiaLyA94Umbjmh6HyhVROPOcVJ1Ju4kb0lzBvvcWFxkzAg/VabKHbYvdRZ9xeBflajG6JCr6yJn9Mshp">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -316,7 +316,7 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: <br>corp.dev@beta-researchl.com
+                    Email: <br>corp.dev@beta-research.com
                     <br>Phone: +2 (0) 000 0000 001
                     <br>Fax: +2 &nbsp;(0) 000 0000 002
                 </p>
@@ -388,7 +388,7 @@
                             
 
                             <div class="form-wrapper" data-form-type="formoid">
-                                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pb0XNLbCmCRy1vng6N8+oTzsKfhknm2BVZs9ucwZVd123ijo22AQBK3x4a1sv1rbsjW4CFIcG9JkNiF5hsHPIWRrX3C9EDDjzj8XBNZ/HK/XODpqFs+i3Y+L6D8aO+ZB.kOM37OPuIErn0dIkeqqaC9kByPPfYVCQ8Y3JzrM7xm9H/Awv5VQ2UNgAXHICvUb3a3ROufKpRuAn2I2tte/4pYAp07/RcOJBlwZ1J3OpLDz7IPj46LzLdZLEZXvAIbKd">
+                                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MqLHlJGmDuxV8FX1jb6gidWG581dEx/JU1wFsSVaheyTvhxONfNlMMP/HJGHfLyME19QOEjeoYIhdLvc2gMZV/oMZxkNozEe22XUxNx5cjWmWRO+EdoCch8f1Ro6Hprm.x2nsPt2AnaDHXwyBZoOw8LMyzwQ3I5j+PGZ822dv/1swgxYksGfJLoTwg6rqeGHaMRdjlWJq1TCSpBdlzs5sXPas5qbfOiugd5QMktEls+Y0d0Rp1iqOosVSCp2e8CHH">
                                     <div class="container">
                                         <div class="row">
                                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
