--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -119,7 +119,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bpfhL1jNWvph1PShZxTz6Qk06TODj8iSyxYuyjFj8AzF7mxCc9MJTyFE3ZK9sRLcjifSVK2VZsKipzU3Cse7GVVMo+lw5wXWVL7PpcpLW44gkxuvpxeWaghoeTwVKLhV.gS6TQeM+U69ssIeUWASHiep+wsf5ImAbIqqXP7BJzR/aj/IZFf6uKLKcMTjKo8wBLBaTNtgfhqJirv3evm/P0hcSsMs++imzglFvyZqSaDxxByRK3T86b3Qwsw1CFEvt">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="PbYrLuZ7tljyfdgoyCkVG3XljIcL1eF2cqKFhKiIQtUJElixMr48bfSD/JKo5lyhW4EaYrE2DvdJUz+fSxfmr+CvD2Xj2q7SBDPXAH7h4mbhwZKgmwVcD6ARtjR5Vnhw.HDRZSR6OcwWBz+9XiWCx0Uvf6Vc0yreQVV85Pu43a4Ie01CLMuC1HNzjCYQ/dmyMZbQ44w+GTMghVEqIvBogWlOrT/sexivN1+O4iy8noe1FdoiMKa7xO1VdGo0832kP">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
